[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Items/Blinker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Items/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/Slime/Jump/slime_0001_jump1.png" type="Texture" id=3]
[ext_resource path="res://src/Shaders/Whiten_Material.tres" type="Material" id=4]
[ext_resource path="res://Assets/Enemies/Slime/Jump/slime_0000_Layer-2-copy.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Slime/Walk/slime_0002_walk-2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Slime/Walk/slime_0003_walk-1.png" type="Texture" id=7]
[ext_resource path="res://src/Slime.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jumpUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jumpDown",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.62034, 8.50165 )

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.739708, 0.0947969 )
scale = Vector2( 0.880222, 0.927316 )
shape = SubResource( 2 )

[node name="Check" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, 0.4 )
enabled = true
collision_mask = 2

[node name="HitBox" parent="." instance=ExtResource( 2 )]
scale = Vector2( 1.25969, 0.461345 )
collision_layer = 4
collision_mask = 24
whiten_matetial = ExtResource( 4 )

[node name="Blinker" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
